--- a/package.json
+++ b/package.json
@@ -1,27 +1,26 @@
 {
-  "name": "benlammers",
-  "version": "1.0.0",
-  "description": "A personal card for Ben Lammers",
-  "main": "index.js",
-  "type": "module",
-  "scripts": {
-    "card": "node ./bin/card.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/benlammers/npx-benlammers.git"
-  },
-  "author": "Ben Lammers",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/benlammers/npx-benlammers/issues"
-  },
-  "homepage": "https://github.com/benlammers/npx-benlammers#readme",
-  "dependencies": {
-    "boxen": "^5.0.1",
-    "chalk": "^4.1.2"
-  },
-  "devDependencies": {
-    "standard": "^16.0.3"
-  }
+   "name": "benlammers",
+   "version": "1.0.0",
+   "description": "A personal card for Ben Lammers",
+   "main": "index.js",
+   "type": "module",
+   "bin": {
+      "bitandbang": "./bin/card.js"
+   },
+   "scripts": {
+      "card": "node ./bin/card.js"
+   },
+   "repository": {
+      "type": "git",
+      "url": "git+https://github.com/benlammers/npx-benlammers.git"
+   },
+   "author": "Ben Lammers",
+   "license": "MIT",
+   "dependencies": {
+      "boxen": "^5.0.1",
+      "chalk": "^4.1.2"
+   },
+   "devDependencies": {
+      "standard": "^16.0.3"
+   }
 }
